force-app/main/default/objects/Quote_Line_Staging__c/Quote_Line_Staging__c.object-meta.xml
<CustomObject>
    <label>Quote Line Staging</label>
    <nameField>
        <displayFormat>QLS-{000000}</displayFormat>
        <label>Quote Line Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Stagings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>