force-app/main/default/objects/Quote_Line_Staging__c/fields/Additional_Disc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc__c</fullName>
    <label>Additional Disc</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>