force-app/main/default/objects/Quote_Line_Staging__c/fields/AdditionalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountAmount__c</fullName>
    <formula>IF( OR(ISNULL(TEXT(Discount_Operator__c)),ISNULL(Additional_Disc__c),ISNULL(List_Unit_Price__c)), 0, IF(OR(TEXT(Discount_Operator__c)==&quot;Amount&quot;,TEXT(Discount_Operator__c)==&quot;&quot;,TEXT(Discount_Operator__c)==null), Additional_Disc__c, (List_Unit_Price__c*Additional_Disc__c)/100))</formula>
    <label>Additional Disc. (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>