force-app/main/default/objects/Quote_Line_Staging__c/fields/AdditionalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountPercent__c</fullName>
    <formula>IF( OR(ISNULL(TEXT(Discount_Operator__c)),ISNULL(List_Unit_Price__c),ISNULL(Additional_Disc__c)), 0, IF(TEXT(Discount_Operator__c)==&quot;Percent&quot;, Additional_Disc__c/100, Additional_Disc__c/List_Unit_Price__c))</formula>
    <label>Additional Disc. (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>