force-app/main/default/objects/Quote_Line_Staging__c/fields/Configuration_Code__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Code__c</fullName>
    <label>Configuration Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>