force-app/main/default/objects/Quote_Line_Staging__c/fields/Configuration_Option__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Option__c</fullName>
    <label>Configuration Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>