force-app/main/default/objects/Quote_Line_Staging__c/fields/Discount_Operator__c.field-meta.xml
<CustomField>
    <fullName>Discount_Operator__c</fullName>
    <label>Discount Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>