force-app/main/default/objects/Quote_Line_Staging__c/fields/Earliest_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Available_Date__c</fullName>
    <label>Earliest Available Date</label>
    <type>Date</type>
</CustomField>