force-app/main/default/objects/Quote_Line_Staging__c/fields/List_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Cost__c</fullName>
    <label>List Unit Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>