force-app/main/default/objects/Quote_Line_Staging__c/fields/Net_Total_Non_Discount__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Non_Discount__c</fullName>
    <formula>List_Unit_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total (Non-Discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>