force-app/main/default/objects/Quote_Line_Staging__c/fields/Non_Discountable__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable__c</fullName>
    <formula>Product__r.SBQQ__NonDiscountable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Discountable</label>
    <type>Checkbox</type>
</CustomField>