force-app/main/default/objects/Quote_Line_Staging__c/fields/PA_API_Message__c.field-meta.xml
<CustomField>
    <fullName>PA_API_Message__c</fullName>
    <label>PA API Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>