force-app/main/default/objects/Quote_Line_Staging__c/fields/ProductParent__c.field-meta.xml
<CustomField>
    <fullName>ProductParent__c</fullName>
    <label>ProductParent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>