force-app/main/default/objects/Quote_Line_Staging__c/fields/Quantity_Editable__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Editable__c</fullName>
    <formula>Product__r.SBQQ__QuantityEditable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Editable</label>
    <type>Checkbox</type>
</CustomField>