force-app/main/default/objects/Quote_Line_Staging__c/fields/Set_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Set_Unit_Price__c</fullName>
    <label>Set Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>