force-app/main/default/objects/Quote_Line_Staging__c/fields/Substituted_Product__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Substituted Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Line Stagings (Substituted Product)</relationshipLabel>
    <relationshipName>Quote_Line_Stagings1</relationshipName>
    <type>Lookup</type>
</CustomField>