force-app/main/default/objects/Quote_Line_Staging__c/fields/Substituted_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product_Code__c</fullName>
    <label>Substituted Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>