force-app/main/default/objects/Quote_Line_Staging__c/fields/Substituted_Product_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product_Created_Date__c</fullName>
    <label>Substituted Product Created Date</label>
    <type>DateTime</type>
</CustomField>