force-app/main/default/objects/Quote_Line_Staging__c/fields/Substituted_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product_Quantity__c</fullName>
    <label>Substituted Product Quantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>