force-app/main/default/objects/Quote_Line_Staging__c/fields/Substituted_Product_Source__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product_Source__c</fullName>
    <label>Substituted Product Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KAP</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>