force-app/main/default/objects/Quote_Line_Staging__c/fields/Total_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Percent__c</fullName>
    <label>Total Margin %</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>