force-app/main/default/objects/Quote_Line_Staging__c/fields/Total_Tax_Amount_Non_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount_Non_Discount__c</fullName>
    <formula>(List_Unit_Price__c *  Quantity__c *  Tax_Rate__c * 100) +  Disposable_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount (Non-Discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>